更新 project1.html

--- a/project1.html
+++ b/project1.html
@@ -508,8 +508,8 @@
   <!-- Navigation -->
   <nav class="nav">
     <div class="nav__container">
-      <a href="#" class="nav__brand">刺青工作室</a>
-      <a href="#" class="nav__back">← 返回首頁</a>
+      <a href="index.html" class="nav__brand">刺青工作室</a>
+      <a href="index.html" class="nav__back">← 返回首頁</a>
     </div>
   </nav>
 
