--- a/index.html
+++ b/index.html
@@ -804,6 +804,9 @@
       visibility: visible;
     }
   </style>
+  <link rel="icon" type="image/png" href="icon.png">
+<link rel="apple-touch-icon" href="icon.png">
+
 </head>
 <body>
   <!-- Navigation -->
